# AMED-bgfg

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
example/: CMakeLists.txt  demo.cpp
include/: bgfg_amed.hpp
src/: bgfg_amed.cpp  bgfg_amed.hpp  main.cpp
tests/: CMakeLists.txt  test.cpp
